--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                 <img src="Pengalaman 5.png" width="610">
 
                 <div class="pengalaman-layer">
-                    <h4>Badut.</h4>
-                    <p>Selalu ada disaat dia sedang tidak baik baik saja.</p>  
+                    <h4>Wkwk:)</h4>
+                    <p>baik baik saja.</p>  
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
              </div>
